# chess-gui

./: .gitignore  Cargo.toml
src/: chesspiece_svg.rs  game.rs  main.rs  settings.rs  start.rs
